Analisador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    CARACTER
    COMENTARIO
    DOISPONTOS
    FINALLINHA
    NOT
    PONTO
    VIRGULA
    numero_mf
    string_mf
    variavel_mf

Grammar

Rule 0     S' -> program
Rule 1     program -> PLAY declarativas estados CLOSE
Rule 2     declarativas -> declarativas declarativa
Rule 3     declarativas -> vazio
Rule 4     declarativa -> tipo VARIAVEL PONTOVIRGULA
Rule 5     tipo -> RESERVADA
Rule 6     estados -> estados estado
Rule 7     estados -> vazio
Rule 8     estado -> assinalar_estado
Rule 9     estado -> se_estado
Rule 10    estado -> repeticao_estado
Rule 11    estado -> io_estado
Rule 12    assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA
Rule 13    se_estado -> CASO ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO senao_estado
Rule 14    senao_estado -> CASOCONTRARIO INICIOBLOCO estados FIMBLOCO
Rule 15    senao_estado -> vazio
Rule 16    repeticao_estado -> REPETICAO ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO
Rule 17    io_estado -> ENTRADA ABREPARENTESE VARIAVEL FECHAPARENTESE PONTOVIRGULA
Rule 18    io_estado -> SAIDA ABREPARENTESE expressao FECHAPARENTESE PONTOVIRGULA
Rule 19    expressao -> termo
Rule 20    expressao -> expressao SOMA termo
Rule 21    expressao -> expressao SUB termo
Rule 22    expressao -> expressao MENOR termo
Rule 23    expressao -> expressao MAIOR termo
Rule 24    expressao -> expressao MENORIGUAL termo
Rule 25    expressao -> expressao MAIORIGUAL termo
Rule 26    expressao -> expressao DUPLOIGUAL termo
Rule 27    expressao -> expressao DIFERENTE termo
Rule 28    expressao -> expressao AND termo
Rule 29    expressao -> expressao OR termo
Rule 30    termo -> fator
Rule 31    termo -> termo MULT fator
Rule 32    termo -> termo DIV fator
Rule 33    termo -> termo RESTO fator
Rule 34    fator -> VARIAVEL
Rule 35    fator -> INTEIRO
Rule 36    fator -> REAL
Rule 37    fator -> ABREPARENTESE expressao FECHAPARENTESE
Rule 38    vazio -> <empty>

Terminals, with rules where they appear

ABREPARENTESE        : 13 16 17 18 37
AND                  : 28
ASPAS                : 
ATRIBUICAO           : 12
CARACTER             : 
CASO                 : 13
CASOCONTRARIO        : 14
CLOSE                : 1
COMENTARIO           : 
DIFERENTE            : 27
DIV                  : 32
DOISPONTOS           : 
DUPLOIGUAL           : 26
ENTRADA              : 17
FECHAPARENTESE       : 13 16 17 18 37
FIMBLOCO             : 13 14 16
FINALLINHA           : 
INICIOBLOCO          : 13 14 16
INTEIRO              : 35
MAIOR                : 23
MAIORIGUAL           : 25
MENOR                : 22
MENORIGUAL           : 24
MULT                 : 31
NOT                  : 
OR                   : 29
PLAY                 : 1
PONTO                : 
PONTOVIRGULA         : 4 12 17 18
REAL                 : 36
REPETICAO            : 16
RESERVADA            : 5
RESTO                : 33
SAIDA                : 18
SOMA                 : 20
SUB                  : 21
VARIAVEL             : 4 12 17 34
VIRGULA              : 
error                : 
numero_mf            : 
string_mf            : 
variavel_mf          : 

Nonterminals, with rules where they appear

assinalar_estado     : 8
declarativa          : 2
declarativas         : 1 2
estado               : 6
estados              : 1 6 13 14 16
expressao            : 12 13 16 18 20 21 22 23 24 25 26 27 28 29 37
fator                : 30 31 32 33
io_estado            : 11
program              : 0
repeticao_estado     : 10
se_estado            : 9
senao_estado         : 13
termo                : 19 20 21 22 23 24 25 26 27 28 29 31 32 33
tipo                 : 4
vazio                : 3 7 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PLAY declarativas estados CLOSE

    PLAY            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PLAY . declarativas estados CLOSE
    (2) declarativas -> . declarativas declarativa
    (3) declarativas -> . vazio
    (38) vazio -> .

    RESERVADA       reduce using rule 38 (vazio -> .)
    CLOSE           reduce using rule 38 (vazio -> .)
    VARIAVEL        reduce using rule 38 (vazio -> .)
    CASO            reduce using rule 38 (vazio -> .)
    REPETICAO       reduce using rule 38 (vazio -> .)
    ENTRADA         reduce using rule 38 (vazio -> .)
    SAIDA           reduce using rule 38 (vazio -> .)

    declarativas                   shift and go to state 3
    vazio                          shift and go to state 4

state 3

    (1) program -> PLAY declarativas . estados CLOSE
    (2) declarativas -> declarativas . declarativa
    (6) estados -> . estados estado
    (7) estados -> . vazio
    (4) declarativa -> . tipo VARIAVEL PONTOVIRGULA
    (38) vazio -> .
    (5) tipo -> . RESERVADA

    CLOSE           reduce using rule 38 (vazio -> .)
    VARIAVEL        reduce using rule 38 (vazio -> .)
    CASO            reduce using rule 38 (vazio -> .)
    REPETICAO       reduce using rule 38 (vazio -> .)
    ENTRADA         reduce using rule 38 (vazio -> .)
    SAIDA           reduce using rule 38 (vazio -> .)
    RESERVADA       shift and go to state 9

    estados                        shift and go to state 5
    declarativa                    shift and go to state 6
    vazio                          shift and go to state 7
    tipo                           shift and go to state 8

state 4

    (3) declarativas -> vazio .

    RESERVADA       reduce using rule 3 (declarativas -> vazio .)
    CLOSE           reduce using rule 3 (declarativas -> vazio .)
    VARIAVEL        reduce using rule 3 (declarativas -> vazio .)
    CASO            reduce using rule 3 (declarativas -> vazio .)
    REPETICAO       reduce using rule 3 (declarativas -> vazio .)
    ENTRADA         reduce using rule 3 (declarativas -> vazio .)
    SAIDA           reduce using rule 3 (declarativas -> vazio .)


state 5

    (1) program -> PLAY declarativas estados . CLOSE
    (6) estados -> estados . estado
    (8) estado -> . assinalar_estado
    (9) estado -> . se_estado
    (10) estado -> . repeticao_estado
    (11) estado -> . io_estado
    (12) assinalar_estado -> . VARIAVEL ATRIBUICAO expressao PONTOVIRGULA
    (13) se_estado -> . CASO ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO senao_estado
    (16) repeticao_estado -> . REPETICAO ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO
    (17) io_estado -> . ENTRADA ABREPARENTESE VARIAVEL FECHAPARENTESE PONTOVIRGULA
    (18) io_estado -> . SAIDA ABREPARENTESE expressao FECHAPARENTESE PONTOVIRGULA

    CLOSE           shift and go to state 10
    VARIAVEL        shift and go to state 16
    CASO            shift and go to state 17
    REPETICAO       shift and go to state 18
    ENTRADA         shift and go to state 19
    SAIDA           shift and go to state 20

    estado                         shift and go to state 11
    assinalar_estado               shift and go to state 12
    se_estado                      shift and go to state 13
    repeticao_estado               shift and go to state 14
    io_estado                      shift and go to state 15

state 6

    (2) declarativas -> declarativas declarativa .

    RESERVADA       reduce using rule 2 (declarativas -> declarativas declarativa .)
    CLOSE           reduce using rule 2 (declarativas -> declarativas declarativa .)
    VARIAVEL        reduce using rule 2 (declarativas -> declarativas declarativa .)
    CASO            reduce using rule 2 (declarativas -> declarativas declarativa .)
    REPETICAO       reduce using rule 2 (declarativas -> declarativas declarativa .)
    ENTRADA         reduce using rule 2 (declarativas -> declarativas declarativa .)
    SAIDA           reduce using rule 2 (declarativas -> declarativas declarativa .)


state 7

    (7) estados -> vazio .

    CLOSE           reduce using rule 7 (estados -> vazio .)
    VARIAVEL        reduce using rule 7 (estados -> vazio .)
    CASO            reduce using rule 7 (estados -> vazio .)
    REPETICAO       reduce using rule 7 (estados -> vazio .)
    ENTRADA         reduce using rule 7 (estados -> vazio .)
    SAIDA           reduce using rule 7 (estados -> vazio .)
    FIMBLOCO        reduce using rule 7 (estados -> vazio .)


state 8

    (4) declarativa -> tipo . VARIAVEL PONTOVIRGULA

    VARIAVEL        shift and go to state 21


state 9

    (5) tipo -> RESERVADA .

    VARIAVEL        reduce using rule 5 (tipo -> RESERVADA .)


state 10

    (1) program -> PLAY declarativas estados CLOSE .

    $end            reduce using rule 1 (program -> PLAY declarativas estados CLOSE .)


state 11

    (6) estados -> estados estado .

    CLOSE           reduce using rule 6 (estados -> estados estado .)
    VARIAVEL        reduce using rule 6 (estados -> estados estado .)
    CASO            reduce using rule 6 (estados -> estados estado .)
    REPETICAO       reduce using rule 6 (estados -> estados estado .)
    ENTRADA         reduce using rule 6 (estados -> estados estado .)
    SAIDA           reduce using rule 6 (estados -> estados estado .)
    FIMBLOCO        reduce using rule 6 (estados -> estados estado .)


state 12

    (8) estado -> assinalar_estado .

    CLOSE           reduce using rule 8 (estado -> assinalar_estado .)
    VARIAVEL        reduce using rule 8 (estado -> assinalar_estado .)
    CASO            reduce using rule 8 (estado -> assinalar_estado .)
    REPETICAO       reduce using rule 8 (estado -> assinalar_estado .)
    ENTRADA         reduce using rule 8 (estado -> assinalar_estado .)
    SAIDA           reduce using rule 8 (estado -> assinalar_estado .)
    FIMBLOCO        reduce using rule 8 (estado -> assinalar_estado .)


state 13

    (9) estado -> se_estado .

    CLOSE           reduce using rule 9 (estado -> se_estado .)
    VARIAVEL        reduce using rule 9 (estado -> se_estado .)
    CASO            reduce using rule 9 (estado -> se_estado .)
    REPETICAO       reduce using rule 9 (estado -> se_estado .)
    ENTRADA         reduce using rule 9 (estado -> se_estado .)
    SAIDA           reduce using rule 9 (estado -> se_estado .)
    FIMBLOCO        reduce using rule 9 (estado -> se_estado .)


state 14

    (10) estado -> repeticao_estado .

    CLOSE           reduce using rule 10 (estado -> repeticao_estado .)
    VARIAVEL        reduce using rule 10 (estado -> repeticao_estado .)
    CASO            reduce using rule 10 (estado -> repeticao_estado .)
    REPETICAO       reduce using rule 10 (estado -> repeticao_estado .)
    ENTRADA         reduce using rule 10 (estado -> repeticao_estado .)
    SAIDA           reduce using rule 10 (estado -> repeticao_estado .)
    FIMBLOCO        reduce using rule 10 (estado -> repeticao_estado .)


state 15

    (11) estado -> io_estado .

    CLOSE           reduce using rule 11 (estado -> io_estado .)
    VARIAVEL        reduce using rule 11 (estado -> io_estado .)
    CASO            reduce using rule 11 (estado -> io_estado .)
    REPETICAO       reduce using rule 11 (estado -> io_estado .)
    ENTRADA         reduce using rule 11 (estado -> io_estado .)
    SAIDA           reduce using rule 11 (estado -> io_estado .)
    FIMBLOCO        reduce using rule 11 (estado -> io_estado .)


state 16

    (12) assinalar_estado -> VARIAVEL . ATRIBUICAO expressao PONTOVIRGULA

    ATRIBUICAO      shift and go to state 22


state 17

    (13) se_estado -> CASO . ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO senao_estado

    ABREPARENTESE   shift and go to state 23


state 18

    (16) repeticao_estado -> REPETICAO . ABREPARENTESE expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO

    ABREPARENTESE   shift and go to state 24


state 19

    (17) io_estado -> ENTRADA . ABREPARENTESE VARIAVEL FECHAPARENTESE PONTOVIRGULA

    ABREPARENTESE   shift and go to state 25


state 20

    (18) io_estado -> SAIDA . ABREPARENTESE expressao FECHAPARENTESE PONTOVIRGULA

    ABREPARENTESE   shift and go to state 26


state 21

    (4) declarativa -> tipo VARIAVEL . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 27


state 22

    (12) assinalar_estado -> VARIAVEL ATRIBUICAO . expressao PONTOVIRGULA
    (19) expressao -> . termo
    (20) expressao -> . expressao SOMA termo
    (21) expressao -> . expressao SUB termo
    (22) expressao -> . expressao MENOR termo
    (23) expressao -> . expressao MAIOR termo
    (24) expressao -> . expressao MENORIGUAL termo
    (25) expressao -> . expressao MAIORIGUAL termo
    (26) expressao -> . expressao DUPLOIGUAL termo
    (27) expressao -> . expressao DIFERENTE termo
    (28) expressao -> . expressao AND termo
    (29) expressao -> . expressao OR termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE

    VARIAVEL        shift and go to state 28
    INTEIRO         shift and go to state 32
    REAL            shift and go to state 33
    ABREPARENTESE   shift and go to state 34

    expressao                      shift and go to state 29
    termo                          shift and go to state 30
    fator                          shift and go to state 31

state 23

    (13) se_estado -> CASO ABREPARENTESE . expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO senao_estado
    (19) expressao -> . termo
    (20) expressao -> . expressao SOMA termo
    (21) expressao -> . expressao SUB termo
    (22) expressao -> . expressao MENOR termo
    (23) expressao -> . expressao MAIOR termo
    (24) expressao -> . expressao MENORIGUAL termo
    (25) expressao -> . expressao MAIORIGUAL termo
    (26) expressao -> . expressao DUPLOIGUAL termo
    (27) expressao -> . expressao DIFERENTE termo
    (28) expressao -> . expressao AND termo
    (29) expressao -> . expressao OR termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE

    VARIAVEL        shift and go to state 28
    INTEIRO         shift and go to state 32
    REAL            shift and go to state 33
    ABREPARENTESE   shift and go to state 34

    expressao                      shift and go to state 35
    termo                          shift and go to state 30
    fator                          shift and go to state 31

state 24

    (16) repeticao_estado -> REPETICAO ABREPARENTESE . expressao FECHAPARENTESE INICIOBLOCO estados FIMBLOCO
    (19) expressao -> . termo
    (20) expressao -> . expressao SOMA termo
    (21) expressao -> . expressao SUB termo
    (22) expressao -> . expressao MENOR termo
    (23) expressao -> . expressao MAIOR termo
    (24) expressao -> . expressao MENORIGUAL termo
    (25) expressao -> . expressao MAIORIGUAL termo
    (26) expressao -> . expressao DUPLOIGUAL termo
    (27) expressao -> . expressao DIFERENTE termo
    (28) expressao -> . expressao AND termo
    (29) expressao -> . expressao OR termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE

    VARIAVEL        shift and go to state 28
    INTEIRO         shift and go to state 32
    REAL            shift and go to state 33
    ABREPARENTESE   shift and go to state 34

    expressao                      shift and go to state 36
    termo                          shift and go to state 30
    fator                          shift and go to state 31

state 25

    (17) io_estado -> ENTRADA ABREPARENTESE . VARIAVEL FECHAPARENTESE PONTOVIRGULA

    VARIAVEL        shift and go to state 37


state 26

    (18) io_estado -> SAIDA ABREPARENTESE . expressao FECHAPARENTESE PONTOVIRGULA
    (19) expressao -> . termo
    (20) expressao -> . expressao SOMA termo
    (21) expressao -> . expressao SUB termo
    (22) expressao -> . expressao MENOR termo
    (23) expressao -> . expressao MAIOR termo
    (24) expressao -> . expressao MENORIGUAL termo
    (25) expressao -> . expressao MAIORIGUAL termo
    (26) expressao -> . expressao DUPLOIGUAL termo
    (27) expressao -> . expressao DIFERENTE termo
    (28) expressao -> . expressao AND termo
    (29) expressao -> . expressao OR termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE

    VARIAVEL        shift and go to state 28
    INTEIRO         shift and go to state 32
    REAL            shift and go to state 33
    ABREPARENTESE   shift and go to state 34

    expressao                      shift and go to state 38
    termo                          shift and go to state 30
    fator                          shift and go to state 31

state 27

    (4) declarativa -> tipo VARIAVEL PONTOVIRGULA .

    RESERVADA       reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    CLOSE           reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    VARIAVEL        reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    CASO            reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    REPETICAO       reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    ENTRADA         reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)
    SAIDA           reduce using rule 4 (declarativa -> tipo VARIAVEL PONTOVIRGULA .)


state 28

    (34) fator -> VARIAVEL .

    MULT            reduce using rule 34 (fator -> VARIAVEL .)
    DIV             reduce using rule 34 (fator -> VARIAVEL .)
    RESTO           reduce using rule 34 (fator -> VARIAVEL .)
    PONTOVIRGULA    reduce using rule 34 (fator -> VARIAVEL .)
    SOMA            reduce using rule 34 (fator -> VARIAVEL .)
    SUB             reduce using rule 34 (fator -> VARIAVEL .)
    MENOR           reduce using rule 34 (fator -> VARIAVEL .)
    MAIOR           reduce using rule 34 (fator -> VARIAVEL .)
    MENORIGUAL      reduce using rule 34 (fator -> VARIAVEL .)
    MAIORIGUAL      reduce using rule 34 (fator -> VARIAVEL .)
    DUPLOIGUAL      reduce using rule 34 (fator -> VARIAVEL .)
    DIFERENTE       reduce using rule 34 (fator -> VARIAVEL .)
    AND             reduce using rule 34 (fator -> VARIAVEL .)
    OR              reduce using rule 34 (fator -> VARIAVEL .)
    FECHAPARENTESE  reduce using rule 34 (fator -> VARIAVEL .)


state 29

    (12) assinalar_estado -> VARIAVEL ATRIBUICAO expressao . PONTOVIRGULA
    (20) expressao -> expressao . SOMA termo
    (21) expressao -> expressao . SUB termo
    (22) expressao -> expressao . MENOR termo
    (23) expressao -> expressao . MAIOR termo
    (24) expressao -> expressao . MENORIGUAL termo
    (25) expressao -> expressao . MAIORIGUAL termo
    (26) expressao -> expressao . DUPLOIGUAL termo
    (27) expressao -> expressao . DIFERENTE termo
    (28) expressao -> expressao . AND termo
    (29) expressao -> expressao . OR termo

    PONTOVIRGULA    shift and go to state 39
    SOMA            shift and go to state 40
    SUB             shift and go to state 41
    MENOR           shift and go to state 42
    MAIOR           shift and go to state 43
    MENORIGUAL      shift and go to state 44
    MAIORIGUAL      shift and go to state 45
    DUPLOIGUAL      shift and go to state 46
    DIFERENTE       shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 30

    (19) expressao -> termo .
    (31) termo -> termo . MULT fator
    (32) termo -> termo . DIV fator
    (33) termo -> termo . RESTO fator

    PONTOVIRGULA    reduce using rule 19 (expressao -> termo .)
    SOMA            reduce using rule 19 (expressao -> termo .)
    SUB             reduce using rule 19 (expressao -> termo .)
    MENOR           reduce using rule 19 (expressao -> termo .)
    MAIOR           reduce using rule 19 (expressao -> termo .)
    MENORIGUAL      reduce using rule 19 (expressao -> termo .)
    MAIORIGUAL      reduce using rule 19 (expressao -> termo .)
    DUPLOIGUAL      reduce using rule 19 (expressao -> termo .)
    DIFERENTE       reduce using rule 19 (expressao -> termo .)
    AND             reduce using rule 19 (expressao -> termo .)
    OR              reduce using rule 19 (expressao -> termo .)
    FECHAPARENTESE  reduce using rule 19 (expressao -> termo .)
    MULT            shift and go to state 50
    DIV             shift and go to state 51
    RESTO           shift and go to state 52


state 31

    (30) termo -> fator .

    MULT            reduce using rule 30 (termo -> fator .)
    DIV             reduce using rule 30 (termo -> fator .)
    RESTO           reduce using rule 30 (termo -> fator .)
    PONTOVIRGULA    reduce using rule 30 (termo -> fator .)
    SOMA            reduce using rule 30 (termo -> fator .)
    SUB             reduce using rule 30 (termo -> fator .)
    MENOR           reduce using rule 30 (termo -> fator .)
    MAIOR           reduce using rule 30 (termo -> fator .)
    MENORIGUAL      reduce using rule 30 (termo -> fator .)
    MAIORIGUAL      reduce using rule 30 (termo -> fator .)
    DUPLOIGUAL      reduce using rule 30 (termo -> fator .)
    DIFERENTE       reduce using rule 30 (termo -> fator .)
    AND             reduce using rule 30 (termo -> fator .)
    OR              reduce using rule 30 (termo -> fator .)
    FECHAPARENTESE  reduce using rule 30 (termo -> fator .)


state 32

    (35) fator -> INTEIRO .

    MULT            reduce using rule 35 (fator -> INTEIRO .)
    DIV             reduce using rule 35 (fator -> INTEIRO .)
    RESTO           reduce using rule 35 (fator -> INTEIRO .)
    PONTOVIRGULA    reduce using rule 35 (fator -> INTEIRO .)
    SOMA            reduce using rule 35 (fator -> INTEIRO .)
    SUB             reduce using rule 35 (fator -> INTEIRO .)
    MENOR           reduce using rule 35 (fator -> INTEIRO .)
    MAIOR           reduce using rule 35 (fator -> INTEIRO .)
    MENORIGUAL      reduce using rule 35 (fator -> INTEIRO .)
    MAIORIGUAL      reduce using rule 35 (fator -> INTEIRO .)
    DUPLOIGUAL      reduce using rule 35 (fator -> INTEIRO .)
    DIFERENTE       reduce using rule 35 (fator -> INTEIRO .)
    AND             reduce using rule 35 (fator -> INTEIRO .)
    OR              reduce using rule 35 (fator -> INTEIRO .)
    FECHAPARENTESE  reduce using rule 35 (fator -> INTEIRO .)


state 33

    (36) fator -> REAL .

    MULT            reduce using rule 36 (fator -> REAL .)
    DIV             reduce using rule 36 (fator -> REAL .)
    RESTO           reduce using rule 36 (fator -> REAL .)
    PONTOVIRGULA    reduce using rule 36 (fator -> REAL .)
    SOMA            reduce using rule 36 (fator -> REAL .)
    SUB             reduce using rule 36 (fator -> REAL .)
    MENOR           reduce using rule 36 (fator -> REAL .)
    MAIOR           reduce using rule 36 (fator -> REAL .)
    MENORIGUAL      reduce using rule 36 (fator -> REAL .)
    MAIORIGUAL      reduce using rule 36 (fator -> REAL .)
    DUPLOIGUAL      reduce using rule 36 (fator -> REAL .)
    DIFERENTE       reduce using rule 36 (fator -> REAL .)
    AND             reduce using rule 36 (fator -> REAL .)
    OR              reduce using rule 36 (fator -> REAL .)
    FECHAPARENTESE  reduce using rule 36 (fator -> REAL .)


state 34

    (37) fator -> ABREPARENTESE . expressao FECHAPARENTESE
    (19) expressao -> . termo
    (20) expressao -> . expressao SOMA termo
    (21) expressao -> . expressao SUB termo
    (22) expressao -> . expressao MENOR termo
    (23) expressao -> . expressao MAIOR termo
    (24) expressao -> . expressao MENORIGUAL termo
    (25) expressao -> . expressao MAIORIGUAL termo
    (26) expressao -> . expressao DUPLOIGUAL termo
    (27) expressao -> . expressao DIFERENTE termo
    (28) expressao -> . expressao AND termo
    (29) expressao -> . expressao OR termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE

    VARIAVEL        shift and go to state 28
    INTEIRO         shift and go to state 32
    REAL            shift and go to state 33
    ABREPARENTESE   shift and go to state 34

    expressao                      shift and go to state 53
    termo                          shift and go to state 30
    fator                          shift and go to state 31

state 35

    (13) se_estado -> CASO ABREPARENTESE expressao . FECHAPARENTESE INICIOBLOCO estados FIMBLOCO senao_estado
    (20) expressao -> expressao . SOMA termo
    (21) expressao -> expressao . SUB termo
    (22) expressao -> expressao . MENOR termo
    (23) expressao -> expressao . MAIOR termo
    (24) expressao -> expressao . MENORIGUAL termo
    (25) expressao -> expressao . MAIORIGUAL termo
    (26) expressao -> expressao . DUPLOIGUAL termo
    (27) expressao -> expressao . DIFERENTE termo
    (28) expressao -> expressao . AND termo
    (29) expressao -> expressao . OR termo

    FECHAPARENTESE  shift and go to state 54
    SOMA            shift and go to state 40
    SUB             shift and go to state 41
    MENOR           shift and go to state 42
    MAIOR           shift and go to state 43
    MENORIGUAL      shift and go to state 44
    MAIORIGUAL      shift and go to state 45
    DUPLOIGUAL      shift and go to state 46
    DIFERENTE       shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 36

    (16) repeticao_estado -> REPETICAO ABREPARENTESE expressao . FECHAPARENTESE INICIOBLOCO estados FIMBLOCO
    (20) expressao -> expressao . SOMA termo
    (21) expressao -> expressao . SUB termo
    (22) expressao -> expressao . MENOR termo
    (23) expressao -> expressao . MAIOR termo
    (24) expressao -> expressao . MENORIGUAL termo
    (25) expressao -> expressao . MAIORIGUAL termo
    (26) expressao -> expressao . DUPLOIGUAL termo
    (27) expressao -> expressao . DIFERENTE termo
    (28) expressao -> expressao . AND termo
    (29) expressao -> expressao . OR termo

    FECHAPARENTESE  shift and go to state 55
    SOMA            shift and go to state 40
    SUB             shift and go to state 41
    MENOR           shift and go to state 42
    MAIOR           shift and go to state 43
    MENORIGUAL      shift and go to state 44
    MAIORIGUAL      shift and go to state 45
    DUPLOIGUAL      shift and go to state 46
    DIFERENTE       shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 37

    (17) io_estado -> ENTRADA ABREPARENTESE VARIAVEL . FECHAPARENTESE PONTOVIRGULA

    FECHAPARENTESE  shift and go to state 56


state 38

    (18) io_estado -> SAIDA ABREPARENTESE expressao . FECHAPARENTESE PONTOVIRGULA
    (20) expressao -> expressao . SOMA termo
    (21) expressao -> expressao . SUB termo
    (22) expressao -> expressao . MENOR termo
    (23) expressao -> expressao . MAIOR termo
    (24) expressao -> expressao . MENORIGUAL termo
    (25) expressao -> expressao . MAIORIGUAL termo
    (26) expressao -> expressao . DUPLOIGUAL termo
    (27) expressao -> expressao . DIFERENTE termo
    (28) expressao -> expressao . AND termo
    (29) expressao -> expressao . OR termo

    FECHAPARENTESE  shift and go to state 57
    SOMA            shift and go to state 40
    SUB             shift and go to state 41
    MENOR           shift and go to state 42
    MAIOR           shift and go to state 43
    MENORIGUAL      shift and go to state 44
    MAIORIGUAL      shift and go to state 45
    DUPLOIGUAL      shift and go to state 46
    DIFERENTE       shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 39

    (12) assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .

    CLOSE           reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    VARIAVEL        reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    CASO            reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    REPETICAO       reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    ENTRADA         reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    SAIDA           reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)
    FIMBLOCO        reduce using rule 12 (assinalar_estado -> VARIAVEL ATRIBUICAO expressao PONTOVIRGULA .)


state 40

    (20) expressao -> expressao SOMA . termo
    (30) termo -> . fator
    (31) termo -> . termo MULT fator
    (32) termo -> . termo DIV fator
    (33) termo -> . termo RESTO fator
    (34) fator -> . VARIAVEL
    (35) fator -> . INTEIRO
    (36) fator -> . REAL
    (37) fator -> . ABREPARENTESE expressao FECHAPARENTESE
